<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/design"
    tools:context="com.almortah.almortah.Search">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@android:color/white" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@mipmap/logo_noname"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorBlue"
                android:text="@string/filter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="15sp"
                    android:textColor="@color/colorGreen"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:labelFor="@+id/location"
                    android:prompt="@string/location"
                    android:spinnerMode="dropdown" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorGreen"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/prices" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/desDesMin"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorDarkGrey"
                    android:textColor="@color/colorWhite"
                    android:text="- -"/>
                <Button
                    android:id="@+id/desMin"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorDarkGrey"
                    android:textColor="@color/colorWhite"
                    android:text="-"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/min"
                    android:maxLength="4"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/minPrice"
                    android:inputType="number" />
                <Button
                    android:id="@+id/addMin"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorWhite"
                    android:text="+"/>
                <Button
                    android:id="@+id/addAddMin"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorWhite"
                    android:text="+ +"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/desDesMax"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorDarkGrey"
                    android:textColor="@color/colorWhite"
                    android:text="- -"/>
            <Button
                android:id="@+id/desMax"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/colorDarkGrey"
                android:textColor="@color/colorWhite"
                android:text="-"/>
            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/max"
                android:maxLength="4"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/maxPrice"
                android:inputType="number" />
                <Button
                    android:id="@+id/addMax"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorWhite"
                    android:text="+"/>
                <Button
                    android:id="@+id/addAddMax"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorWhite"
                    android:text="+ +"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorGreen"
                    android:text="@string/date" />

              <DatePicker
                  android:id="@+id/date"
                  android:layout_width="wrap_content"
                  android:layout_height="110dp"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"
                  android:theme="@style/DatePicker"
                  android:datePickerMode="spinner"
                  android:spinnersShown="true"
                  android:calendarViewShown="false"
                  />
            </LinearLayout>


            <Button
                android:layout_width="280dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:id="@+id/filter"
                android:layout_margin="10dp"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:text="@string/filter1"/>

            <Button
                android:id="@+id/search"
                android:layout_width="280dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:text="@string/findSpecifcChalet"/>

        </LinearLayout>
        </ScrollView>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            />
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
