...
        android:textColor="@color/colorGreen"
        android:textSize="14sp"
        android:textStyle="normal|bold" />


    <Button
        android:id="@+id/guestButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/guest"
        android:textColor="@color/colorWhite" />

...
